Pedalboards lib: get rid of left block; move search field to top menu

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -16,6 +16,17 @@
     margin: 0 0 18px 0;
     padding: 0;
   }
+  header {
+    .form-group {
+      display: inline-block;
+      float: right;
+      margin-top: 5px;
+      margin-right: 8px;
+      .form-control {
+        width: 200px !important;
+      }
+    }
+  }
   .filter {
     border-color: #111;
     border-style: dotted;
@@ -42,7 +53,7 @@
     }
   }
   .pedalboards {
-    left: 240px;
+    left: 0px;
     position: fixed;
     right: 0px;
     top: 45px;
@@ -55,7 +66,7 @@
       width: 31%;
     }
     .pedalboard .img {
-      background: #2b2b2b;
+      background: #212121;
       border-radius: 4px;
       display: block;
       height: 154px;
