--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6669,6 +6669,15 @@ button.close {
   margin: 0 0 18px 0;
   padding: 0;
 }
+#pedalboards-library header .form-group {
+  display: inline-block;
+  float: right;
+  margin-top: 5px;
+  margin-right: 8px;
+}
+#pedalboards-library header .form-group .form-control {
+  width: 200px !important;
+}
 #pedalboards-library .filter {
   border-color: #111;
   border-style: dotted;
@@ -6695,7 +6704,7 @@ button.close {
   width: 50px;
 }
 #pedalboards-library .pedalboards {
-  left: 240px;
+  left: 0px;
   position: fixed;
   right: 0px;
   top: 45px;
@@ -6709,7 +6718,7 @@ button.close {
   width: 31%;
 }
 #pedalboards-library .pedalboards .pedalboard .img {
-  background: #2b2b2b;
+  background: #212121;
   border-radius: 4px;
   display: block;
   height: 154px;
