Re-style pedalboard-library entries

--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -5,9 +5,9 @@
     <div class="info">
         <span class="title">{{title}}</span>
         <span class="actions">
-            <span class="js-load open">Open</span>
+            <!--<span class="js-load open">Open</span>-->
             <!--<span class="js-duplicate duplicate hidden">Duplicate</span>-->
-            <span class="js-remove delete" style="float:right">Delete</span>
+            <span class="js-remove delete" style="float:right"></span>
         </span>
     </div>
 </div>
