--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -59,55 +59,82 @@
     top: 45px;
     bottom: 45px;
     background: #111;
+    padding-top: 1.5%;
     .pedalboard {
       color: #fff;
       float: left;
-      margin: 0 0 20px 16px;
-      width: 31%;
-    }
-    .pedalboard .img {
-      background: #212121;
-      border-radius: 4px;
-      display: block;
-      height: 154px;
-      margin-bottom: 9px;
-      width: 100%;
-      overflow: hidden;
-    }
-    .pedalboard .img img {
-      background: url(../img/loading-pedalboard.gif) center center no-repeat;
-      cursor: pointer;
-      height: auto;
-      height: 100%;
-      width: 100%;
-    }
-    .pedalboard .title {
-      display: block;
-      height: 18px;
-      font-weight: bold;
-      overflow: hidden;
+      margin: 0 0 1.5% 1.5%;
+      width: 31.3%;
+      height: 15vw;
       position: relative;
-    }
-    .pedalboard .description {
-      display: block;
-      font-size: 12px;
-      height: 36px;
-      line-height: 1.5;
-      overflow: hidden;
-    }
-    .pedalboard .actions {
-      font-size: 11px;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-    .pedalboard .actions > span {
-      cursor: pointer;
-    }
-    .pedalboard .actions > span:hover {
-      text-decoration: underline;
-    }
-    .pedalboard .actions span.duplicate {
-      margin: 0 6px;
+      background: #212121 url(../img/loading-pedalboard.gif) center center no-repeat;
+      border: 1px solid #000;
+      &:hover {
+        border-color: @brand-primary;
+        .info {
+          background: @brand-primary;
+        }
+      }
+      .img {
+        background: url(../img/background.jpg);
+        background-size: cover;
+        display: block;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        text-align: center;
+        img {
+          cursor: pointer;
+          height: 100%;
+          width: auto;
+          margin: auto;
+        }
+      }
+      .info {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.5);
+        height: 25px;
+        padding-left: 5px;
+      }
+      .title {
+        display: block;
+        line-height: 25px;
+        font-weight: bold;
+        overflow: hidden;
+        position: relative;
+      }
+      .description {
+        display: block;
+        font-size: 12px;
+        height: 36px;
+        line-height: 1.5;
+        overflow: hidden;
+      }
+      .actions {
+        font-size: 11px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: absolute;
+        top: 0;
+        right: 0;
+        .js-remove {
+          width: 25px;
+          height: 25px;
+          background-image: url(../img/icons/25/delete.png);
+        }
+      }
+      .actions > span {
+        cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
+        &.duplicate {
+          margin: 0 6px;
+        }
+      }
     }
   }
 }
