--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6710,32 +6710,51 @@ button.close {
   top: 45px;
   bottom: 45px;
   background: #111;
+  padding-top: 1.5%;
 }
 #pedalboards-library .pedalboards .pedalboard {
   color: #fff;
   float: left;
-  margin: 0 0 20px 16px;
-  width: 31%;
+  margin: 0 0 1.5% 1.5%;
+  width: 31.3%;
+  height: 15vw;
+  position: relative;
+  background: #212121 url(../img/loading-pedalboard.gif) center center no-repeat;
+  border: 1px solid #000;
+}
+#pedalboards-library .pedalboards .pedalboard:hover {
+  border-color: #883996;
+}
+#pedalboards-library .pedalboards .pedalboard:hover .info {
+  background: #883996;
 }
 #pedalboards-library .pedalboards .pedalboard .img {
-  background: #212121;
-  border-radius: 4px;
+  background: url(../img/background.jpg);
+  background-size: cover;
   display: block;
-  height: 154px;
-  margin-bottom: 9px;
   width: 100%;
+  height: 100%;
   overflow: hidden;
+  text-align: center;
 }
 #pedalboards-library .pedalboards .pedalboard .img img {
-  background: url(../img/loading-pedalboard.gif) center center no-repeat;
   cursor: pointer;
-  height: auto;
   height: 100%;
-  width: 100%;
+  width: auto;
+  margin: auto;
+}
+#pedalboards-library .pedalboards .pedalboard .info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+  height: 25px;
+  padding-left: 5px;
 }
 #pedalboards-library .pedalboards .pedalboard .title {
   display: block;
-  height: 18px;
+  line-height: 25px;
   font-weight: bold;
   overflow: hidden;
   position: relative;
@@ -6751,6 +6770,14 @@ button.close {
   font-size: 11px;
   font-weight: bold;
   text-transform: uppercase;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#pedalboards-library .pedalboards .pedalboard .actions .js-remove {
+  width: 25px;
+  height: 25px;
+  background-image: url(../img/icons/25/delete.png);
 }
 #pedalboards-library .pedalboards .pedalboard .actions > span {
   cursor: pointer;
@@ -6758,7 +6785,7 @@ button.close {
 #pedalboards-library .pedalboards .pedalboard .actions > span:hover {
   text-decoration: underline;
 }
-#pedalboards-library .pedalboards .pedalboard .actions span.duplicate {
+#pedalboards-library .pedalboards .pedalboard .actions > span.duplicate {
   margin: 0 6px;
 }
 /* Make clicks pass-through */
