--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -141,7 +141,8 @@ body {
 }
 
 body {
-  background: #393939;
+  background: #111;
+  
   min-width: 1024px;
 }
 
@@ -468,7 +469,6 @@ header#pedalboard-actions,
 #bank-library header,
 #cloud-plugins-library header,
 #pedalboards-library header {
-  background: #111;
   display: block;
   left: 0;
   height: 45px;
@@ -479,6 +479,12 @@ header#pedalboard-actions,
   z-index: 5;
   box-shadow:0 1px 10px rgba(0,0,0,0.1);
   z-index:5;
+  background-color: #111;
+  background-position: 3px 50%;
+  background-size: 36px;
+  background-repeat: no-repeat;
+  background-image: url(../img/icons/36/mod.png);
+  padding-left: 45px;
   .help {
     background-image: url(../img/icn-help-16x16.png);
     background-position: center center;
@@ -533,17 +539,11 @@ header#pedalboard-actions,
     line-height: 49px;
     height: 45px;
     padding: 0;
-    padding-left: 42px;
-    background-position: 3px 50%;
-    background-size: 36px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icons/36/mod.png);
   }
 }
 header#pedalboard-actions {
     box-shadow: 0 2px 12px black;
 }
-
 .tooltip {
   background: white;
   border-radius: 3px;
@@ -1137,6 +1137,9 @@ header#pedalboard-actions {
   clear: both;
 }
 
+.blend {
+  opacity: 0.25;
+}
 .box {
   padding: 10px;
 }
