--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7999,6 +7999,9 @@ header#pedalboard-actions {
 .mod-hidden {
   display: none;
 }
+.mod-init-hidden {
+  opacity: 0;
+}
 ::selection {
   background: transparent;
 }
@@ -8028,18 +8031,21 @@ header#pedalboard-actions {
   width: 190px;
 }
 .screen-disconnected {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(17, 17, 17, 0.9);
   color: white;
-  display: table;
-  font-size: 72px;
+  display: block;
+  position: fixed;
+  width: 100% !important;
   height: 100% !important;
   text-align: center;
   z-index: 10;
 }
 .screen-disconnected p {
-  display: table-cell;
-  vertical-align: middle;
-  line-height: 90px;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  margin-top: 56px;
+  font-size: 24px;
 }
 .plugin-wait {
   background: url(../img/loading-effect.gif) no-repeat center center;
