New notification styles

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -199,8 +199,9 @@ hr.dotted {
   }
 #notifications {
   position: absolute;
-  top: 0;
-  width: 100%;
+  top: 55px;
+  right: 10px;
+  width: 320px;
   z-index: 100000;
   > section {
     border-radius: 0;
@@ -1262,4 +1263,26 @@ header#pedalboard-actions {
     0%   { box-shadow: 0 0 0 transparent; }
     50%  { box-shadow: 0 0 10px white; }
     100% { box-shadow: 0 0 0 transparent; }
+}
+
+
+/* it SUCKS to deal with all those "super easy" frameworks! *phew* */
+
+.alert {
+    background: rgba(17, 17, 17, 0.9);
+    border-width: 0 0 0 6px;
+    border-radius: 0 0 6px 6px;
+    border-color: @brand-primary;
+    color: white;
+    box-shadow: 0 3px 10px black;
+    .js-close {
+        color: white;
+    }
+    margin-top: 5px !important;
+}
+.alert-warning {
+    border-color: @brand-warning;
+}
+.alert-danger {
+    border-color: #c00;
 }
