--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6958,7 +6958,7 @@ hr.dotted {
 #notifications {
   position: absolute;
   top: 55px;
-  right: 10px;
+  right: 0px;
   width: 320px;
   z-index: 100000;
 }
@@ -8076,11 +8076,10 @@ header#pedalboard-actions {
     box-shadow: 0 0 0 transparent;
   }
 }
-/* it SUCKS to deal with all those "super easy" frameworks! *phew* */
 .alert {
   background: rgba(17, 17, 17, 0.9);
   border-width: 0 0 0 6px;
-  border-radius: 0 0 6px 6px;
+  border-radius: 6px 0 0 6px !important;
   border-color: #883996;
   color: white;
   box-shadow: 0 3px 10px black;
