round top borders for pedalborads in library

--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -69,6 +69,7 @@
       position: relative;
       background: #212121 url(../img/loading-pedalboard.gif) center center no-repeat;
       border: 1px solid #000;
+      border-radius: 6px 6px 0 0 !important;
       transition: all 0.5s;
       &:hover {
         border-color: @brand-primary;
@@ -79,6 +80,7 @@
       }
       .img {
         background: url(../img/background.jpg);
+        border-radius: 5px 5px 0 0 !important;
         background-size: cover;
         display: block;
         width: 100%;
@@ -94,6 +96,7 @@
       }
       .info {
         position: absolute;
+        border-radius: 5px 5px 0 0 !important;
         top: 0;
         left: 0;
         right: 0;
