--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6721,6 +6721,7 @@ button.close {
   position: relative;
   background: #212121 url(../img/loading-pedalboard.gif) center center no-repeat;
   border: 1px solid #000;
+  border-radius: 6px 6px 0 0 !important;
   transition: all 0.5s;
 }
 #pedalboards-library .pedalboards .pedalboard:hover {
@@ -6732,6 +6733,7 @@ button.close {
 }
 #pedalboards-library .pedalboards .pedalboard .img {
   background: url(../img/background.jpg);
+  border-radius: 5px 5px 0 0 !important;
   background-size: cover;
   display: block;
   width: 100%;
@@ -6747,6 +6749,7 @@ button.close {
 }
 #pedalboards-library .pedalboards .pedalboard .info {
   position: absolute;
+  border-radius: 5px 5px 0 0 !important;
   top: 0;
   left: 0;
   right: 0;
