--- a/html/css/less/banks.less
+++ b/html/css/less/banks.less
@@ -18,27 +18,30 @@ span {
       background-repeat: no-repeat;
       display: block;
       float: left;
-      height: 22px;
+      height: 32px;
       left: 0;
       cursor: move !important;
       margin: -1px 6px 0 0;
       width: 24px;
     }
     &.remove {
-      background-image: url(../img/icn-remove-bank.png);
-      background-position: left center;
-      background-repeat: no-repeat;
-      display: block;
+      cursor: pointer;
       float: right;
-      height: 22px;
-      margin: -1px 6px 0 0;
-      width: 24px;
-      cursor: pointer !important;
+      width: 32px;
+      height: 32px;
+      display: block;
+      background-image: url(../img/icons/25/delete.png);
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      transition: background-color 0.33s;
+      &:hover {
+        background-color: @brand-warning;
+      }
     }
     &.title {
       display: block;
       float: left;
-      height: 22px;
+      height: 32px;
       overflow: hidden;
       max-width: 70%;
       white-space: nowrap
@@ -77,22 +80,22 @@ input::selection {
   bottom: 45px;
   overflow-y: auto;
   top: 45px;
-  width: 19.95%;
-  border-color: #111;
-  border-style: dotted;
-  border-width: 0 1px 0 0;
+  width: 20%;
   > div {
     &.add-bank {
       color: #fff;
       cursor: pointer;
-      padding-left: 45px;
+      padding-left: 5px;
+      line-height: 32px;
       text-transform: uppercase;
-      small {
-        text-transform: lowercase;
-        color: #666;
-        margin-left: 1em;
+      transition: all 0.33s;
+      &:hover {
+        background: @brand-warning;
       }
-
+      .icon-add {
+        display: inline.block;
+        width: 32px;
+      }
     }
     &.selected span.move {
       background-position: right center;
@@ -104,12 +107,13 @@ input::selection {
   .edit-bank {
     color: #555;
     width: 100% !important;
-    height: 1.8em;
-    padding-left: 1em;
+    height: 30px;
+    margin: 1px;
+    padding-left: 0.5em;
     background-color: #fff;
     background-image: none;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 0px solid #ccc;
+    border-radius: 0px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
@@ -120,32 +124,33 @@ input::selection {
     background: #222;
     color: #888;
     cursor: pointer;
-    font-size: 12px;
     font-weight: bold;
     margin: 0 0 1px 0;
-    padding: 10px 5px;
     content: \002B;
     position: relative;
+    transition: all 0.33s;
     &.selected {
-      background: #111;
+      background: @brand-primary;
       color: #fff;
     }
     &:hover {
-      background: #333;
+      background: #000;
     }
   }
   .bank-item {
     display: block;
     background: #222;
     color: #888;
-    height: 35px;
+    line-height: 32px;
+    height: 32px;
     cursor: pointer;
-    font-size: 12px;
     font-weight: bold;
     margin: 0 0 1px 0;
-    padding: 5px 15px;
-    line-height: 1.8em;
-    position: relative;          
+    padding-left: 5px;
+    position: relative;
+    .remove {
+      border-radius: 0;
+    }
   }
   .filter_ {
     border-color: #111;
@@ -200,14 +205,13 @@ input::selection {
   padding: 0;
   position: fixed;
   text-align: left;
-  top: 54px;
-  width: 45%;
+  top: 45px;
+  width: 50%;
   h1 {
     font-size: 2em;
     padding: 0em;
     max-height: 2em;
     display: block;
-    border-bottom: 2px dotted #333;
     margin: 1em;
     padding-bottom: 1em;
     color: white;
@@ -251,39 +255,44 @@ input::selection {
   padding: 0 0 200px 0;
   position: fixed;
   top: 144px;
-  width: 45%;
+  width: 50%;
   > div {
-    margin: 10px 10px 0 10px;
-    padding: 10px 10px 0 10px;
+    margin: 20px 20px 0 20px;
   }
   .pedalboard {
-    border-bottom: 1px dotted #333;
     color: #fff;
     cursor: -webkit-grab !important;
-    padding-bottom: 30px;
     width: 100%;
+    transition: all 0.33s;
     &:active {
       cursor: -webkit-grabbing !important;
     }
+    &:hover {
+        background-color: @brand-primary;
+    }
     .info {
-      margin-bottom: 3px;
+      height: 32px;
+      padding-left: 5px;
     }
     .title {
       display: block;
+      line-height: 32px;
       font-weight: bold;
-      margin-bottom: 3px;
       overflow: hidden;
       position: relative;
     }
     .img {
-      background: #2b2b2b;
-      border-radius: 4px;
       display: inline-block;
       float: left;
       height: auto;
       margin: 0 9px 0 0;
       text-align: center;
       width: 100%;
+      background: url(../img/background.jpg);
+      background-size: auto 100%;
+      background-position: center center;
+      box-shadow: inset 0 3px 6px black;
+      border: 1px solid #000;
     }
   }
   .mode {
@@ -299,14 +308,28 @@ input::selection {
   width: 80%;
   bottom: 45px;
   top: 45px;
-  left: 19.95%
+  left: 20%
 }
 #bank-pedalboards-search {
+  bottom: 45px;
+  right: 0%;
+  overflow: auto;
+  position: fixed;
+  top: 0px;
+  width: 30%;
+  z-index: 6;
   h2 {
     text-transform: uppercase;
     color: white;
     font-size: 1.5em;
     font-weight: bold;
+    float: left;
+  }
+  .box {
+    background: #111;
+    padding: 0;
+    padding-top: 5px;
+    box-sizing: border-box;
   }
   input {
     width: 50%;
@@ -318,19 +341,12 @@ input::selection {
   .remove {
     display: none !important;
   }
-  bottom: 45px;
-    left: 65.01%;
-    overflow: auto;
-    position: fixed;
-    top: 55px;
-    background-color: #222;
-    border-left: 1px dotted #333;
-    width: 34.98%;
   label {
     color: #fff;
-    font-size: 11px;
     font-weight: bold;
     text-transform: uppercase;
+    float: left;
+    line-height: 45px;
   }
   .control-group {
     margin-bottom: 10px;
@@ -340,13 +356,13 @@ input::selection {
   }
   input[type="search"] {
     width: 50% !important;
+    float: right;
   }
   select {
     width: 100%;
   }
   .input-clean {
     background: #333;
-    border-radius: 12px;
     color: #fff;
     cursor: pointer;
     font-size: 8px;
@@ -414,37 +430,41 @@ input::selection {
 
 #bank-pedalboards-result {
   position: fixed;
-  bottom: 46px;
-  top: 133px;
+  bottom: 45px;
+  top: 45px;
   overflow: auto;
-  width: 34.4%;
+  width: 30%;
+  background: #2c2c2c;
   .pedalboard {
-    border-top: 1px dotted #444;
     color: #fff;
     cursor: -webkit-grab;
-    float: left;
-    margin: 10px 2.5% 0;
-    padding: 10px 0;
-    width: 95%;
+    margin: 20px 20px 0 20px;
+    transition: all 0.33s;
     &:active {
       cursor: -webkit-grabbing !important;
     }
+    &:hover {
+        background-color: @brand-primary;
+    }
     .img {
-      background: #2b2b2b;
       display: block;
       height: auto;
       margin: 0 auto;
       text-align: center;
       width: 100%;
+      background: url(../img/background.jpg);
+      background-size: auto 100%;
+      background-position: center center;
+      box-shadow: inset 0 3px 6px black;
+      border: 1px solid #000;
     }
     .title {
       display: block;
-      height: 18px;
-      font-size: 12px;
+      line-height: 32px;
       font-weight: bold;
-      margin-bottom: 10px;
       overflow: hidden;
       position: relative;
+      padding-left: 5px;
     }
     .description {
       display: block;
