--- a/html/css/less/pedalboards.less
+++ b/html/css/less/pedalboards.less
@@ -21,7 +21,7 @@
       display: inline-block;
       float: right;
       margin-top: 5px;
-      margin-right: 8px;
+      margin-right: 5px;
       .form-control {
         width: 200px !important;
       }
@@ -65,26 +65,21 @@
       float: left;
       margin: 0 0 1.5% 1.5%;
       width: 31.3%;
-      height: 15vw;
       position: relative;
-      background: #212121 url(../img/loading-pedalboard.gif) center center no-repeat;
-      border: 1px solid #000;
-      border-radius: 6px 6px 0 0 !important;
-      transition: all 0.5s;
+      background: transparent url(../img/loading-pedalboard.gif) center center no-repeat;
+      transition: all 0.33s;
       &:hover {
-        border-color: @brand-primary;
-        box-shadow: 0 4px 10px black;
-        .info {
-          background: @brand-primary;
-        }
+        background-color: @brand-primary;
       }
       .img {
         background: url(../img/background.jpg);
-        border-radius: 5px 5px 0 0 !important;
-        background-size: cover;
+        background-size: auto 100%;
+        background-position: center center;
+        box-shadow: inset 0 3px 6px black;
+        border: 1px solid #000;
         display: block;
         width: 100%;
-        height: 100%;
+        height: 15vw;
         overflow: hidden;
         text-align: center;
         img {
@@ -95,19 +90,12 @@
         }
       }
       .info {
-        position: absolute;
-        border-radius: 5px 5px 0 0 !important;
-        top: 0;
-        left: 0;
-        right: 0;
-        background: rgba(0, 0, 0, 0.5);
-        height: 25px;
+        height: 32px;
         padding-left: 5px;
-        transition: all 0.5s;
       }
       .title {
         display: block;
-        line-height: 25px;
+        line-height: 32px;
         font-weight: bold;
         overflow: hidden;
         position: relative;
@@ -120,16 +108,21 @@
         overflow: hidden;
       }
       .actions {
-        font-size: 11px;
         font-weight: bold;
         text-transform: uppercase;
         position: absolute;
         top: 0;
         right: 0;
         .js-remove {
-          width: 25px;
-          height: 25px;
+          width: 32px;
+          height: 32px;
           background-image: url(../img/icons/25/delete.png);
+          background-repeat: no-repeat;
+          background-position: 50% 50%;
+          transition: background-color 0.33s;
+          &:hover {
+            background-color: @brand-warning;
+          }
         }
       }
       .actions > span {
