--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -191,6 +191,7 @@ hr.dotted {
   text-transform: uppercase;
   margin-top: -26px !important;
   width: 18px;
+  border-radius: 100%;
 }
 .form-control::selection {
     background: @brand-primary !important;
@@ -685,6 +686,7 @@ header#pedalboard-actions {
       left: auto;
       transform: translateY(-50%);
       margin: 0 !important;
+      border-radius: 100%;
     }
 
   }
