Separate filters in pedalstore

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -69,8 +69,9 @@
           height: 32px;
           line-height: 32px;
           width: 100%;
-          margin-bottom: 1px;
+          margin-bottom: 15px;
           padding-left: 15px;
+          border: 0px solid @brand-warning;
           &:hover {
             background: #000;
           }
@@ -89,7 +90,7 @@
       }
       .categories {
         width: 100%;
-        margin: 0px 0 1px 0;
+        margin: 0px 0 15px 0;
         li {
           display: block;
           background: #222;
